@@ -128,6 +128,9 @@ const char *lixa_strerror(int ret_cod)
             case LIXA_RC_UNLINK_ERROR:
                 return "ERROR: 'unlink' function returned an error condition";
                 */
+            case LIXA_RC_XML_READ_FILE_ERROR:
+                return "ERROR: 'xmlReadFile' function returned an error "
+                    "condition";
             default:
                 return "ERROR: unknown error";
         } /* switch (ret_cod) */
